--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body{
     background-color:bisque;
     border-radius:10px;
+    background-image:
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
